fix: small screen text going off screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,9 +235,9 @@ p {
 }
 
 .gt_hero_content>h1 {
-  font-size: 70px;
+  font-size: 60px;
   font-weight: 800;
-  text-shadow: black;
+  text-shadow: rgb(58, 58, 58);
   color: white;
   margin-bottom: 0px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
@@ -247,4 +247,11 @@ p {
   margin-top: 30px;
   font-weight: 300;
   color: white;
+}
+
+@media screen and (max-width: 450px) {
+  .gt_hero_content>h1 {
+    font-size: 30px;
+    /* Reduce the font size for screens up to 768px wide */
+  }
 }
